--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <fragment
+    <FrameLayout
         android:id="@+id/fragment_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:name="com.uni.officecriminal.CriminalListFragment"></fragment>
+        android:layout_height="match_parent"></FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
